# aish

./: .gitignore  Cargo.toml  FULL_TESTS.md  FUNCTIONALITY.md  LICENSE  MANUAL_TESTS.md  MANUAL_TEST_RESULTS1.md  MUNUAL_TESTS.md  PHASE2.md  README.md  SPEC.md  SYNC.md  TESTING_MANUAL.md  TESTS.md  TODO.md
src/: ai.rs  app.rs  commands.rs  completion.rs  completion_worker.rs  config.rs  context.rs  display_width.rs  editor.rs  encrypted_writer.rs  encryption.rs  env_name.rs  git_remote.rs  history.rs  input.rs  keybindings.rs  lib.rs  log.rs  main.rs  modes.rs  paste.rs  picker.rs  process_control.rs  pty.rs  shell_completion.rs  shell_integration.rs  sync.rs  templates.rs  terminal.rs
src/app/: bootstrap.rs  completion_runtime.rs  config_commands.rs  context_prompt.rs  editor_state.rs  encryption_commands.rs  event_log.rs  execution.rs  help.rs  history_ops.rs  private_commands.rs  private_output.rs  prompt.rs  prompt_command.rs  reports.rs  selection_state.rs  startup_unlock.rs  state.rs  sync_commands.rs  template_args.rs  template_remotes.rs  tests.rs
src/completion/: arguments.rs  first_token.rs  index.rs  matching.rs  parser.rs  path.rs  private.rs  ranking.rs  render.rs  structural.rs  tests.rs  types.rs  typo.rs
src/config/: file.rs  layout.rs  model.rs  normalize.rs  paths.rs  private.rs
src/encryption/: keys.rs  tests.rs
src/history/: tests.rs
src/pty/: control.rs  filter.rs  launch.rs  parser.rs  protocol.rs  syntax.rs  tests.rs  unix_backend.rs
tests/: draft_execution.rs  expect_runner.rs  first_run.rs  pty_backend.rs  tmux_capture.rs
(+225 files in other folders)
