[package]
name = "aish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
dirs = "6.0"
getrandom = "0.3"
libc = "0.2"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.10"
